--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -13,3 +13,14 @@ hibernate.hbm2ddl.auto=
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=true
 hibernate.format_sql=true
+
+
+
+# Bonus Malus Lower Bound
+bonus.malus.range.lower.bound=1
+
+# Bonus Malus Uower Bound
+bonus.malus.range.upper.bound=10
+
+# Amount Decimal Digits Allowed
+decimal.digits.allowed=2
