Added property and mobile APIs

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -24,3 +24,6 @@ bonus.malus.range.upper.bound=10
 
 # Amount Decimal Digits Allowed
 decimal.digits.allowed=2
+
+# Minimum Construction Year Allowed For Properties Of Contracts
+minimum.construction.year=1950
