--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <version>8.0.13</version>
         </dependency>
 
+        <!-- JavaX -->
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
 
     </dependencies>
 
