Integrated with IACS

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -27,3 +27,6 @@ decimal.digits.allowed=2
 
 # Minimum Construction Year Allowed For Properties Of Contracts
 minimum.construction.year=1950
+
+# IACS Url
+iacs.url=http://localhost:8085
