refactoring - Rearranges application properties

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,20 +1,52 @@
+# ===============================
+# = LOGGING
+# ===============================
+# Log levels severity mapping.
+logging.level.org.springframework = info
+logging.level.org.hibernate.SQL = info
+
+# ===============================
+# = H2 WEB CONSOLE
+# ===============================
+# Enable the console. (default:= false)
+#spring.h2.console.enabled = true
+# Path at which the console will be available. (default:= /h2-console)
+#spring.h2.console.path = /h2-console
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+# Connection url for the database "insurance"
+# without verifying DB identity nor using or requiring SSL
+#spring.datasource.url=jdbc:h2:file:~/insurance;IFEXISTS=FALSE
+#spring.datasource.url=jdbc:h2:mem:insurance_db
+#spring.datasource.username=sa
+#spring.datasource.hikari.maximum-pool-size=30
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.tomcat.test-while-idle=true
+
 # Database Connection Info
-spring.datasource.url=jdbc:mysql://localhost/insurance_db
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=toor
+# Properties for postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/insurance_db
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=30
 
+# Populate the database using 'schema.sql' and 'data.sql'.
+spring.datasource.initialization-mode = NEVER
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+spring.jpa.generate-ddl = true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
-
-
-#Hibernate Configuration
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=
-hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=true
-hibernate.format_sql=true
-
-
+# Disable feature detection by this undocumented parameter.
+# Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Bonus Malus Lower Bound
 bonus.malus.range.lower.bound=1
