--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,17 @@
             <artifactId>spring-data-commons</artifactId>
             <version>2.1.1.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>RELEASE</version>
+        </dependency>
+
+        <!-- Spring Security dependency -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <!-- Datasource -->
