security - Moves resource files under resources folder.

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -29,7 +29,7 @@ logging.level.org.hibernate.SQL = info
 # Properties for postgres
 spring.datasource.url = jdbc:postgresql://localhost:5432/insurance_db
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=postgres
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=30
 
