--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -46,6 +46,7 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 # Disable feature detection by this undocumented parameter.
 # Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Bonus Malus Lower Bound
