master - Tries to fix java.sql.SQLFeatureNotSupportedException: Method org.postgresql.jdbc.PgConnection.createClob exception on heroku deployment according to: https://stackoverflow.com/questions/49110818/method-org-postgresql-jdbc-pgconnection-createclob-is-not-yet-implemented

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -47,7 +47,7 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 # Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 
 # Bonus Malus Lower Bound
 bonus.malus.range.lower.bound=1
