master - Tries to fix java.sql.SQLFeatureNotSupportedException: Method org.postgresql.jdbc.PgConnection.createClob exception on heroku deployment according to: https://stackoverflow.com/questions/49110818/method-org-postgresql-jdbc-pgconnection-createclob-is-not-yet-implemented

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -19,19 +19,19 @@ logging.level.org.hibernate.SQL = info
 # Connection url for the database "insurance"
 # without verifying DB identity nor using or requiring SSL
 #spring.datasource.url=jdbc:h2:file:~/insurance;IFEXISTS=FALSE
-#spring.datasource.url=jdbc:h2:mem:insurance_db
-#spring.datasource.username=sa
-#spring.datasource.hikari.maximum-pool-size=30
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.tomcat.test-while-idle=true
+spring.datasource.url=jdbc:h2:mem:insurance_db
+spring.datasource.username=sa
+spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.tomcat.test-while-idle=true
 
 # Database Connection Info
 # Properties for postgres
-spring.datasource.url = jdbc:postgresql://localhost:5432/insurance_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.hikari.maximum-pool-size=30
+#spring.datasource.url = jdbc:postgresql://localhost:5432/insurance_db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.driver-class-name = org.postgresql.Driver
+#spring.datasource.hikari.maximum-pool-size=30
 
 # Populate the database using 'schema.sql' and 'data.sql'.
 spring.datasource.initialization-mode = NEVER
