--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -9,9 +9,9 @@ logging.level.org.hibernate.SQL = info
 # = H2 WEB CONSOLE
 # ===============================
 # Enable the console. (default:= false)
-#spring.h2.console.enabled = true
+spring.h2.console.enabled = true
 # Path at which the console will be available. (default:= /h2-console)
-#spring.h2.console.path = /h2-console
+spring.h2.console.path = /h2-console
 
 # ===============================
 # = DATA SOURCE
@@ -41,12 +41,12 @@ spring.jpa.show-sql = true
 spring.jpa.generate-ddl = true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 # Disable feature detection by this undocumented parameter.
 # Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 
 # Bonus Malus Lower Bound
