heroku-deployment - Changes to postgresql datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ logging.level.org.hibernate.SQL = info
 # = H2 WEB CONSOLE
 # ===============================
 # Enable the console. (default:= false)
-spring.h2.console.enabled = true
+#spring.h2.console.enabled = true
 # Path at which the console will be available. (default:= /h2-console)
-spring.h2.console.path = /h2-console
+#spring.h2.console.path = /h2-console
 
 # ===============================
 # = DATA SOURCE
@@ -19,19 +19,19 @@ spring.h2.console.path = /h2-console
 # Connection url for the database "insurance"
 # without verifying DB identity nor using or requiring SSL
 #spring.datasource.url=jdbc:h2:file:~/insurance;IFEXISTS=FALSE
-spring.datasource.url=jdbc:h2:mem:insurance_db
-spring.datasource.username=sa
-spring.datasource.hikari.maximum-pool-size=30
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.tomcat.test-while-idle=true
+#spring.datasource.url=jdbc:h2:mem:insurance_db
+#spring.datasource.username=sa
+#spring.datasource.hikari.maximum-pool-size=30
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.tomcat.test-while-idle=true
 
 # Database Connection Info
 # Properties for postgres
-#spring.datasource.url = jdbc:postgresql://localhost:5432/insurance_db
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.datasource.driver-class-name = org.postgresql.Driver
-#spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.url = jdbc:postgresql://localhost:5432/insurance_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=30
 
 # Populate the database using 'schema.sql' and 'data.sql'.
 spring.datasource.initialization-mode = NEVER
@@ -45,8 +45,8 @@ spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 # Disable feature detection by this undocumented parameter.
 # Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 
 # Bonus Malus Lower Bound
